  (Jani)
- Fixed bug #49985 (pdo_pgsql prepare() re-use previous aborted
  transaction). (ben dot pineau at gmail dot com, Ilia, Matteo)  
- Fixed bug #49938 (Phar::isBuffering() returns inverted value). (Greg)
- Fixed bug #49936 (crash with ftp stream in php_stream_context_get_option()).
  (Pierrick)
- Fixed bug #49921 (Curl post upload functions changed). (Ilia)
- Fixed bug #49855 (import_request_variables() always returns NULL). (Ilia,
  sjoerd at php dot net)
- Fixed bug #49800 (SimpleXML allow (un)serialize() calls without warning).
  (Ilia, wmeler at wp-sa dot pl)
- Fixed bug #49719 (ReflectionClass::hasProperty returns true for a private
  property in base class). (Felipe)
- Fixed bug #49677 (ini parser crashes with apache2 and using ${something}
  ini variables). (Jani)
- Fixed bug #49660 (libxml 2.7.3+ limits text nodes to 10MB). (Felipe)
- Fixed bug #49647 (DOMUserData does not exist). (Rob)
- Fixed bug #49521 (PDO fetchObject sets values before calling constructor).
  (Pierrick)
- Fixed bug #49472 (Constants defined in Interfaces can be overridden).
  (Felipe)
- Fixed bug #49244 (Floating point NaN cause garbage characters). (Sjoerd)
- Fixed bug #49224 (Compile error due to old DNS functions on AIX systems).
  (Scott)
- Fixed bug #47848 (importNode doesn't preserve attribute namespaces). (Rob)
- Fixed bug #45120 (PDOStatement->execute() returns true then false for same
  statement). (Pierrick)
- Fixed bug #34852 (Failure in odbc_exec() using oracle-supplied odbc
  driver). (tim dot tassonis at trivadis dot com)

19 Nov 2009, PHP 5.3.1
- Upgraded bundled sqlite to version 3.6.19. (Scott)
- Updated timezone database to version 2009.17 (2009q). (Derick)

- Changed ini file directives [PATH=](on Win32) and [HOST=](on all) to be case 
  insensitive. (garretts)

- Restored shebang line check to CGI sapi (not checked by scanner anymore).
  (Jani)

- Added "max_file_uploads" INI directive, which can be set to limit the